--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -6,7 +6,7 @@
 HongYuCMS V3.0.3 build 2020-10-07
 1、修复上版本出现的地址后缀不一致问题；
 2、修复搜索功能多语言混乱问题；
-3、新增{pboot:isregister}用于js检查用户名是否已经注册；
+3、新增{hongyu:isregister}用于js检查用户名是否已经注册；
 4、修复已经注册的邮箱仍然发送验证码问题；
 5、修复系统存在的安全问题；
 
@@ -44,20 +44,20 @@ username、nickname、password、rpassword、checkcode //注册必填
 comment、checkcode //评论必填
 
 //会员页面标签
-{pboot:ucenter} 个人中心地址
-{pboot:login} 登录地址
-{pboot:register} 注册地址
-{pboot:umodify} 资料修改地址
-{pboot:logout} 退出登录地址
-{pboot:upload} 文件上传AJAX接口
-{pboot:islogin} 是否登录状态
-{pboot:mustlogin} 设置页面必须登录
-{pboot:sendemail} 发送邮件验证码接口,参数to
-{pboot:registercodestatus} 会员注册验证码状态0、1、2
-{pboot:logincodestatus} 会员登录验证码状态
-{pboot:registerstatus} 是否开启注册
-{pboot:loginstatus} 是否开启登录
-{pboot:commentstatus} 是否开启评论
+{hongyu:ucenter} 个人中心地址
+{hongyu:login} 登录地址
+{hongyu:register} 注册地址
+{hongyu:umodify} 资料修改地址
+{hongyu:logout} 退出登录地址
+{hongyu:upload} 文件上传AJAX接口
+{hongyu:islogin} 是否登录状态
+{hongyu:mustlogin} 设置页面必须登录
+{hongyu:sendemail} 发送邮件验证码接口,参数to
+{hongyu:registercodestatus} 会员注册验证码状态0、1、2
+{hongyu:logincodestatus} 会员登录验证码状态
+{hongyu:registerstatus} 是否开启注册
+{hongyu:loginstatus} 是否开启登录
+{hongyu:commentstatus} 是否开启评论
 
 //会员模板控制标签，如：{content:title showgcode=1}
 showgcode=* 指定等级显示，支持多个逗号隔开
@@ -91,10 +91,10 @@ hidelogin=1 登录后隐藏
 {user:***} 自定义会员字段，如果{user:sex}
 
 //文章评论
-{pboot:commentcodestatus} 验证码是否开启
-{pboot:commentaction} 评论提交地址
+{hongyu:commentcodestatus} 验证码是否开启
+{hongyu:commentaction} 评论提交地址
 
-{pboot:comment contentid={content:id}}
+{hongyu:comment contentid={content:id}}
 	[comment:i] 序号0开始
 	[comment:n]	序号1开始
 	[comment:pid] 父评论ID
@@ -115,14 +115,14 @@ hidelogin=1 登录后隐藏
 	[comment:likes] 点赞数量
 	[comment:oppose] 反对数量
 	[comment:replyaction] 评论回复提交地址
-	{pboot:commentsub} 子评论输出
+	{hongyu:commentsub} 子评论输出
 		[commentsub:***] 子评论调用字段同上
-	{/pboot:commentsub}
-{/pboot:comment}
+	{/hongyu:commentsub}
+{/hongyu:comment}
 
 //我的评论
-{pboot:mycommentpage} 我的评论页面地址
-{pboot:mycomment}
+{hongyu:mycommentpage} 我的评论页面地址
+{hongyu:mycomment}
 	[mycomment:i] 序号0开始
 	[mycomment:n]	序号1开始
 	[mycomment:pid] 父评论ID
@@ -146,7 +146,7 @@ hidelogin=1 登录后隐藏
 	[mycomment:status] 评论状态1审核2待审核
 	[mycomment:replyaction] 评论回复提交地址
 	[mycomment:delaction] 评论删除地址
-{/pboot:mycomment}
+{/hongyu:mycomment}
 
 
 HongYuCMS V2.0.9 build 2020-06-18
@@ -471,9 +471,9 @@ HongYuCMS V1.1.6 build 2018-07-21
 9、新增调用指定栏目 标签scode支持多个分类;
 10、新增如果栏目及内容关键字标签为空时自动使用全局关键字;
 11、新增如果栏目及内容描述标签为空时自动使用全局描述;
-12、新增全局自动页面标题标签{pboot:pagetitle};
-13、新增全局自动页面关键字标签{pboot:pagekeywords};
-14、新增全局自动页面描述标签{pboot:pagedescription}
+12、新增全局自动页面标题标签{hongyu:pagetitle};
+13、新增全局自动页面关键字标签{hongyu:pagekeywords};
+14、新增全局自动页面描述标签{hongyu:pagedescription}
 15、新增留言表单添加更多字段的支持;
 16、新增幻灯片、友情链接、扩展字段排序的支持;
 17、新增sitemap生成，读取地址/index.php/sitemap;
@@ -492,8 +492,8 @@ HongYuCMS V1.1.5 build 2018-07-10
 4、修复后台多选字段无法取消问题;
 5、新增调试模式后台开关;
 6、新增访问地址不存在时404状态信息;
-7、新增运行时间标签{pboot:runtime};
-8、新增留言验证码判断标签{pboot:checkcodestatus};
+7、新增运行时间标签{hongyu:runtime};
+8、新增留言验证码判断标签{hongyu:checkcodestatus};
 9、新增筛选全部按钮的class和active分别设置;
 10、新增类似filter=title|php,asp多条件过滤支持;
 11、新增搜索列表scode、field调节控制参数支持;
@@ -518,7 +518,7 @@ HongYuCMS V1.1.4 build 2018-06-25
 7、新增后台开启高速静态缓存功能;
 8、新增后台填写授权码功能;
 9、新增指定列表scode使用逗号调用多个分类功能;
-10、新增{pboot:keyword}标签;
+10、新增{hongyu:keyword}标签;
 11、新增数据库安全提示及修改功能;
 
 HongYuCMS V1.1.3 build 2018-06-15
